pkg/gox/testdata/errors/empty_attr_expression.gox
package demo

func View() any {
	return <Button Label={} />
}
